--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ericblade/quagga2": "^1.8.4",
+    "axios": "^1.8.4",
+    "html5-qrcode": "^2.3.8",
     "next": "15.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
