--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.8.4",
     "html5-qrcode": "^2.3.8",
     "next": "15.2.4",
+    "quagga": "^0.12.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0"
