--- a/package.json
+++ b/package.json
@@ -11,12 +11,18 @@
   "dependencies": {
     "@ericblade/quagga2": "^1.8.4",
     "axios": "^1.8.4",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "html5-qrcode": "^2.3.8",
+    "input-otp": "^1.4.2",
+    "lucide-react": "^0.503.0",
     "next": "15.2.4",
     "quagga": "^0.12.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "tailwind-merge": "^3.2.0",
+    "tw-animate-css": "^1.2.8"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
